# opea-movies

./: fullbot.py  pyproject.toml  retriver.py
notebooks/: dataprep.ipynb
